removed some unintentional data from index

--- a/education.html
+++ b/education.html
@@ -53,10 +53,10 @@
 										  <img src="university-logo.png" alt="University Logo">
 										</div>
 										<div class="details">
-										  <h3>University Name</h3>
-										  <p>Course Name</p>
-										  <p>City, Country</p>
-										  <p>Duration of Study: Start Date - End Date</p>
+										  <h3>Politecnico of Turin</h3>
+										  <p>Computer engineering</p>
+										  <p>Turin, Italy</p>
+										  <p>Duration of Study: October 2019 - July 2023</p>
 										  <ul>
 											<li>Relevant Course 1</li>
 											<li>Relevant Course 2</li>
