--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<span class="date">April 08, 2023</span>
 									<a id="toIntro"></a>
 									<h2><a href="#">About me</h2> </a>
-									<p>About
+									<p>
 										Fully committed to the philosophy of life-long learning, I’m a Computer engineering intern with 
 										a deep passion for Machine learning, data science and all things Artificial intelligence. 
 										The unique combination of creativity, logic, technology and never running out of new things to 
@@ -88,7 +88,7 @@
 								
 
 							</article>
-						<!-- Posts -->
+						<!--Posts 
 							<section class="posts">
 								<article>
 									<header>
@@ -127,7 +127,7 @@
 									</ul>
 								</article>
 								
-							</section>
+							</section> -->
 
 						<!-- Footer -->
 							<footer>
