update of navigation

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<!-- Header -->
 					<header id="header">
 						<!-- later we can add scroll to anchor function -->
-						<a href="#toIntro" class="logo">view my work</a>
+						<a href="#toIntro" class="logo">view my works</a>
 					</header>
 
 				<!-- Nav I can make it stick to top later -->
@@ -49,9 +49,9 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">About Me</a></li>
 							<li><a href="education.html">Education</a></li>
-							<li><a href="elements.html">Skills</a></li>
-							<li><a href="elements.html">projects</a></li>
-							<li><a href="elements.html">Contact me</a></li>
+							<li><a href="skills.html">Skills</a></li>
+							<li><a href="Projects.html">projects</a></li>
+							<li><a href="ContactMe.html">Contact me</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/mahdi-rashidi-193063152/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
@@ -129,15 +129,16 @@
 								
 							</section> -->
 
-						<!-- Footer -->
+						<!-- Footer 
 							<footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<!--<a href="#" class="previous">Prev</a>
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="next">Next</a>
 								</div>
 							</footer>
+						-->
 
 					</div>
 
