--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<!-- Header -->
 					<header id="header">
 						<!-- later we can add scroll to anchor function -->
-						<a href="#toIntro" class="logo">view my works</a>
+						<a href="Projects.html" class="logo">view my works</a>
 					</header>
 
 				<!-- Nav I can make it stick to top later -->
